async-coap-uri/proc-macros/tests/ui/assert_rel_ref_literal/missing_char_1.stderr
error: missing 1 char after '%'
 --> $DIR/missing_char_1.rs:7:29
  |
7 |     assert_rel_ref_literal!("https://www.example.com/a/%a");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
